--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,5 @@ version = "0.1.0"
 authors = ["SAWADA Tadashi <cesare@mayverse.jp>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
+redis = { version = "~0.19.0", features = ["tokio-comp"] }
