--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ path = "src/ping.rs"
 
 [dependencies]
 redis = { version = "~0.19.0", features = ["tokio-comp"] }
+tokio = { version = "~1.2", features = ["full"] }
