--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ path = "src/subscribe.rs"
 [dependencies]
 futures-util = "~0.3.12"
 redis = { version = "~0.19.0", features = ["tokio-comp"] }
+serde = { version = "~1.0.123", features = ["derive"] }
 serde_json = "~1.0.62"
 structopt = "~0.3.21"
 tokio = { version = "~1.2", features = ["full"] }
